# grpc-python-rust

./: README.md  setup.sh
helloworld-tonic/: Cargo.toml  compile_proto.sh  hello_world_client.py  helloworld_pb2.py  helloworld_pb2_grpc.py  run_python_client.sh  run_rust_client.sh  run_rust_server.sh
matrix_multiply/: Cargo.toml  build.rs  client.py  compile_proto.sh  matrix_multiply_pb2.py  matrix_multiply_pb2_grpc.py  run_client.sh  run_python_server.sh  run_rust_server.sh  server.py
matrix_multiply/proto/: matrix_multiply.proto
matrix_multiply/src/: server.rs
